--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,15 +4,19 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    	<uses-permission android:name = "android.permission.CAMERA"/>
+	<uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="17" />
     
 	<application
 	android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+	    
         <activity
             android:name="ualberta.cmput301.camerademo.CameraDemoActivity"
             android:label="@string/app_name" >
